修改conversion.sh，输出三种格式的文件，c开头的为清除全部颜色，s开头的方便在终端查看，m开头的方便以md格式查看

--- a/English/c2021.11.04.md
+++ b/English/c2021.11.04.md
@@ -1,286 +1,572 @@
-<font color=Red>aviation</font>
+aviation
 
-英 <font color=Teal>[eɪvɪ'eɪʃ(ə)n]</font>  美 <font color=Teal>[,evɪ'eʃən]</font>
+英 [eɪvɪ'eɪʃ(ə)n]  美 [,evɪ'eʃən]
 
-<font color=Blue>n. 航空；飞行术；飞机制造业</font>
+n. 航空；飞行术；飞机制造业
 
-<font color=Red>CET6 TEM4</font>  
+CET6 TEM4  
 
-<font color=Red>asset</font>
+asset
 
-英 <font color=Teal>['æset]</font>  美 <font color=Teal>['æsɛt]</font>
+英 ['æset]  美 ['æsɛt]
 
-<font color=Blue>n. 资产；优点；有用的东西；有利条件；财产；有价值的人或物</font>
+n. 资产；优点；有用的东西；有利条件；财产；有价值的人或物
 
-<font color=Blue>n. （法）阿塞（人名）</font>
+n. （法）阿塞（人名）
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( assets )</font>
+CET4 TEM4  ( assets )
 
 
 
-<font color=Red>attempt</font>
+attempt
 
-英 <font color=Teal>[ə'tem(p)t]</font>  美 <font color=Teal>[ə'tɛmpt]</font>
+英 [ə'tem(p)t]  美 [ə'tɛmpt]
 
-<font color=Blue>n. 企图，试图；攻击</font>
+n. 企图，试图；攻击
 
-<font color=Blue>vt. 企图，试图；尝试</font>
+vt. 企图，试图；尝试
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( attempting, attempted, attempts )</font>
+CET4 TEM4  ( attempting, attempted, attempts )
 
 
 
-<font color=Red>astronomy</font>
+astronomy
 
-英 <font color=Teal>[ə'strɒnəmɪ]</font>  美 <font color=Teal>[ə'strɑnəmi]</font>
+英 [ə'strɒnəmɪ]  美 [ə'strɑnəmi]
 
-<font color=Blue>n. 天文学</font>
+n. 天文学
 
-<font color=Red>CET6 TEM4</font>  
+CET6 TEM4  
 
-<font color=Red>astonish</font>
+astonish
 
-英 <font color=Teal>[ə'stɒnɪʃ]</font>  美 <font color=Teal>[ə'stɑnɪʃ]</font>
+英 [ə'stɒnɪʃ]  美 [ə'stɑnɪʃ]
 
-<font color=Blue>vt. 使惊讶</font>
+vt. 使惊讶
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( astonishing, astonished, astonishes )</font>
+CET4 TEM4  ( astonishing, astonished, astonishes )
 
 
 
-<font color=Red>attorney</font>
+attorney
 
-英 <font color=Teal>[ə'tɜːnɪ]</font>  美 <font color=Teal>[ə'tɝni]</font>
+英 [ə'tɜːnɪ]  美 [ə'tɝni]
 
-<font color=Blue>n. 律师；代理人；检查官</font>
+n. 律师；代理人；检查官
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( attorneys )</font>
+CET4 TEM4  ( attorneys )
 
 
 
-<font color=Red>assimilate</font>
+assimilate
 
-英 <font color=Teal>[ə'sɪmɪleɪt]</font>  美 <font color=Teal>[ə'sɪməlet]</font>
+英 [ə'sɪmɪleɪt]  美 [ə'sɪməlet]
 
-<font color=Blue>vt. 吸收；使同化；把…比作；使相似</font>
+vt. 吸收；使同化；把…比作；使相似
 
-<font color=Blue>vi. 吸收；同化</font>
+vi. 吸收；同化
 
-<font color=Red>CET6 TEM8</font>  <font color=Red>( assimilating, assimilated, assimilates )</font>
+CET6 TEM8  ( assimilating, assimilated, assimilates )
 
 
 
-<font color=Red>athlete</font>
+athlete
 
-英 <font color=Teal>['æθliːt]</font>  美 <font color=Teal>['æθlit]</font>
+英 ['æθliːt]  美 ['æθlit]
 
-<font color=Blue>n. 运动员，体育家；身强力壮的人</font>
+n. 运动员，体育家；身强力壮的人
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( athletes )</font>
+CET4 TEM4  ( athletes )
 
 
 
-<font color=Red>assurance</font>
+assurance
 
-英 <font color=Teal>[ə'ʃʊər(ə)ns]</font>  美 <font color=Teal>[ə'ʃʊrəns]</font>
+英 [ə'ʃʊər(ə)ns]  美 [ə'ʃʊrəns]
 
-<font color=Blue>n. 保证，担保；（人寿）保险；确信；断言；厚脸皮，无耻</font>
+n. 保证，担保；（人寿）保险；确信；断言；厚脸皮，无耻
 
-<font color=Red>CET6 TEM4</font>  <font color=Red>( assurances )</font>
+CET6 TEM4  ( assurances )
 
 
 
-<font color=Red>attendant</font>
+attendant
 
-英 <font color=Teal>[ə'tend(ə)nt]</font>  美 <font color=Teal>[ə'tɛndənt]</font>
+英 [ə'tend(ə)nt]  美 [ə'tɛndənt]
 
-<font color=Blue>adj. 伴随的；侍候的</font>
+adj. 伴随的；侍候的
 
-<font color=Blue>n. 服务员，侍者；随员，陪从</font>
+n. 服务员，侍者；随员，陪从
 
-<font color=Red>CET6 TEM4</font>  <font color=Red>( attendants )</font>
+CET6 TEM4  ( attendants )
 
 
 
-<font color=Red>assignment</font>
+assignment
 
-英 <font color=Teal>[ə'saɪnm(ə)nt]</font>  美 <font color=Teal>[ə'saɪnmənt]</font>
+英 [ə'saɪnm(ə)nt]  美 [ə'saɪnmənt]
 
-<font color=Blue>n. 分配；任务；作业；功课</font>
+n. 分配；任务；作业；功课
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( assignments )</font>
+CET4 TEM4  ( assignments )
 
 
 
-<font color=Red>association</font>
+association
 
-英 <font color=Teal>[əˌsəʊsɪˈeɪʃn]</font>  美 <font color=Teal>[ə,soʃɪ'eʃən]</font>
+英 [əˌsəʊsɪˈeɪʃn]  美 [ə,soʃɪ'eʃən]
 
-<font color=Blue>n. 协会，联盟，社团；联合；联想</font>
+n. 协会，联盟，社团；联合；联想
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( associations )</font>
+CET4 TEM4  ( associations )
 
 
 
-<font color=Red>assist</font>
+assist
 
-英 <font color=Teal>[ə'sɪst]</font>  美 <font color=Teal>[ə'sɪst]</font>
+英 [ə'sɪst]  美 [ə'sɪst]
 
-<font color=Blue>n. 帮助；助攻</font>
+n. 帮助；助攻
 
-<font color=Blue>vi. 参加；出席</font>
+vi. 参加；出席
 
-<font color=Blue>vt. 帮助；促进</font>
+vt. 帮助；促进
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( assisting, assisted, assists )</font>
+CET4 TEM4  ( assisting, assisted, assists )
 
 
 
-<font color=Red>atmosphere</font>
+atmosphere
 
-英 <font color=Teal>['ætməsfɪə]</font>  美 <font color=Teal>['ætməsfɪr]</font>
+英 ['ætməsfɪə]  美 ['ætməsfɪr]
 
-<font color=Blue>n. 气氛；大气；空气</font>
+n. 气氛；大气；空气
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( atmospheres )</font>
+CET4 TEM4  ( atmospheres )
 
 
 
-<font color=Red>attendance</font>
+attendance
 
-英 <font color=Teal>[ə'tend(ə)ns]</font>  美 <font color=Teal>[ə'tɛndəns]</font>
+英 [ə'tend(ə)ns]  美 [ə'tɛndəns]
 
-<font color=Blue>n. 出席；到场；出席人数；考勤</font>
+n. 出席；到场；出席人数；考勤
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( attendances )</font>
+CET4 TEM4  ( attendances )
 
 
 
-<font color=Red>assume</font>
+assume
 
-英 <font color=Teal>[ə'sjuːm]</font>  美 <font color=Teal>[ə'sum]</font>
+英 [ə'sjuːm]  美 [ə'sum]
 
-<font color=Blue>vi. 假定；设想；承担；采取</font>
+vi. 假定；设想；承担；采取
 
-<font color=Blue>vt. 僭取；篡夺；夺取；擅用；侵占</font>
+vt. 僭取；篡夺；夺取；擅用；侵占
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( assuming, assumed, assumes )</font>
+CET4 TEM4  ( assuming, assumed, assumes )
 
 
 
-<font color=Red>attitude</font>
+attitude
 
-英 <font color=Teal>['ætɪtjuːd]</font>  美 <font color=Teal>['ætɪtʊd]</font>
+英 ['ætɪtjuːd]  美 ['ætɪtʊd]
 
-<font color=Blue>n. 态度；看法；意见；姿势</font>
+n. 态度；看法；意见；姿势
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( attitudes )</font>
+CET4 TEM4  ( attitudes )
 
 
 
-<font color=Red>attribute</font>
+attribute
 
-英 <font color=Teal>[ə'trɪbjuːt]</font>  美 <font color=Teal>[ə'trɪbjut]</font>
+英 [ə'trɪbjuːt]  美 [ə'trɪbjut]
 
-<font color=Blue>n. 属性；特质</font>
+n. 属性；特质
 
-<font color=Blue>vt. 归属；把…归于</font>
+vt. 归属；把…归于
 
-<font color=Red>CET4</font>  <font color=Red>( attributing, attributed, attributes )</font>
+CET4  ( attributing, attributed, attributes )
 
 
 
-<font color=Red>audience</font>
+audience
 
-英 <font color=Teal>['ɔːdɪəns]</font>  美 <font color=Teal>['ɔdɪəns]</font>
+英 ['ɔːdɪəns]  美 ['ɔdɪəns]
 
-<font color=Blue>n. 观众；听众；读者；接见；正式会见；拜会</font>
+n. 观众；听众；读者；接见；正式会见；拜会
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( audiences )</font>
+CET4 TEM4  ( audiences )
 
 
 
-<font color=Red>attraction</font>
+attraction
 
-英 <font color=Teal>[ə'trækʃ(ə)n]</font>  美 <font color=Teal>[ə'trækʃən]</font>
+英 [ə'trækʃ(ə)n]  美 [ə'trækʃən]
 
-<font color=Blue>n. 吸引，吸引力；引力；吸引人的事物</font>
+n. 吸引，吸引力；引力；吸引人的事物
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( attractions )</font>
+CET4 TEM4  ( attractions )
 
 
 
-<font color=Red>authenticate</font>
+authenticate
 
-英 <font color=Teal>[ɔː'θentɪkeɪt]</font>  美 <font color=Teal>[ɔ'θɛntɪket]</font>
+英 [ɔː'θentɪkeɪt]  美 [ɔ'θɛntɪket]
 
-<font color=Blue>vt. 鉴定；证明…是真实的</font>
+vt. 鉴定；证明…是真实的
 
-<font color=Red>( authenticating, authenticated, authenticates )</font>
+( authenticating, authenticated, authenticates )
 
 
 
-<font color=Red>authentic</font>
+authentic
 
-英 <font color=Teal>[ɔː'θentɪk]</font>  美 <font color=Teal>[ɔ'θɛntɪk]</font>
+英 [ɔː'θentɪk]  美 [ɔ'θɛntɪk]
 
-<font color=Blue>adj. 真正的，真实的；可信的</font>
+adj. 真正的，真实的；可信的
 
-<font color=Red>CET4 TEM4</font>  
+CET4 TEM4  
 
-<font color=Red>authority</font>
+authority
 
-英 <font color=Teal>[ɔː'θɒrɪtɪ]</font>  美 <font color=Teal>[ə'θɔrəti]</font>
+英 [ɔː'θɒrɪtɪ]  美 [ə'θɔrəti]
 
-<font color=Blue>n. 权威；权力；当局</font>
+n. 权威；权力；当局
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( authorities )</font>
+CET4 TEM4  ( authorities )
 
 
 
-<font color=Red>authorize</font>
+authorize
 
-英/美 <font color=Teal>['ɔθəraɪz]</font>
+英/美 ['ɔθəraɪz]
 
-<font color=Blue>vt. 批准，认可；授权给；委托代替</font>
+vt. 批准，认可；授权给；委托代替
 
-<font color=Red>CET6 TEM4</font>  <font color=Red>( authorizing, authorized, authorizes )</font>
+CET6 TEM4  ( authorizing, authorized, authorizes )
 
 
 
-<font color=Red>automatic</font>
+automatic
 
-英 <font color=Teal>[ɔːtə'mætɪk]</font>  美 <font color=Teal>['ɔtə'mætɪk]</font>
+英 [ɔːtə'mætɪk]  美 ['ɔtə'mætɪk]
 
-<font color=Blue>adj. 自动的；无意识的；必然的</font>
+adj. 自动的；无意识的；必然的
 
-<font color=Blue>n. 自动机械；自动手枪</font>
+n. 自动机械；自动手枪
 
-<font color=Red>CET4 TEM4</font>  <font color=Red>( automatics )</font>
+CET4 TEM4  ( automatics )
 
 
 
-<font color=Red>avail</font>
+avail
 
-英 <font color=Teal>[ə'veɪl]</font>  美 <font color=Teal>[ə'vel]</font>
+英 [ə'veɪl]  美 [ə'vel]
 
-<font color=Blue>n. 效用，利益</font>
+n. 效用，利益
 
-<font color=Blue>vt. 有益于，有益于；使对某人有利。</font>
+vt. 有益于，有益于；使对某人有利。
 
-<font color=Blue>vi. 有益于，有益于；使对某人有利。</font>
+vi. 有益于，有益于；使对某人有利。
 
-<font color=Red>CET6 TEM8</font>  <font color=Red>( availing, availed, avails )</font>
+CET6 TEM8  ( availing, availed, avails )
 
 
 
-<font color=Red>avert</font>
+avert
 
-英 <font color=Teal>[ə'vɜːt]</font>  美 <font color=Teal>[ə'vɝt]</font>
+英 [ə'vɜːt]  美 [ə'vɝt]
 
-<font color=Blue>vt. 避免，防止；转移</font>
+vt. 避免，防止；转移
 
-<font color=Red>CET6 TEM8</font>  <font color=Red>( averting, averted, averts )</font>
+CET6 TEM8  ( averting, averted, averts )
+
+
+
+aviation
+
+英 [eɪvɪ'eɪʃ(ə)n]  美 [,evɪ'eʃən]
+
+n. 航空；飞行术；飞机制造业
+
+CET6 TEM4  
+
+asset
+
+英 ['æset]  美 ['æsɛt]
+
+n. 资产；优点；有用的东西；有利条件；财产；有价值的人或物
+
+n. （法）阿塞（人名）
+
+CET4 TEM4  ( assets )
+
+
+
+attempt
+
+英 [ə'tem(p)t]  美 [ə'tɛmpt]
+
+n. 企图，试图；攻击
+
+vt. 企图，试图；尝试
+
+CET4 TEM4  ( attempting, attempted, attempts )
+
+
+
+astronomy
+
+英 [ə'strɒnəmɪ]  美 [ə'strɑnəmi]
+
+n. 天文学
+
+CET6 TEM4  
+
+astonish
+
+英 [ə'stɒnɪʃ]  美 [ə'stɑnɪʃ]
+
+vt. 使惊讶
+
+CET4 TEM4  ( astonishing, astonished, astonishes )
+
+
+
+attorney
+
+英 [ə'tɜːnɪ]  美 [ə'tɝni]
+
+n. 律师；代理人；检查官
+
+CET4 TEM4  ( attorneys )
+
+
+
+assimilate
+
+英 [ə'sɪmɪleɪt]  美 [ə'sɪməlet]
+
+vt. 吸收；使同化；把…比作；使相似
+
+vi. 吸收；同化
+
+CET6 TEM8  ( assimilating, assimilated, assimilates )
+
+
+
+athlete
+
+英 ['æθliːt]  美 ['æθlit]
+
+n. 运动员，体育家；身强力壮的人
+
+CET4 TEM4  ( athletes )
+
+
+
+assurance
+
+英 [ə'ʃʊər(ə)ns]  美 [ə'ʃʊrəns]
+
+n. 保证，担保；（人寿）保险；确信；断言；厚脸皮，无耻
+
+CET6 TEM4  ( assurances )
+
+
+
+attendant
+
+英 [ə'tend(ə)nt]  美 [ə'tɛndənt]
+
+adj. 伴随的；侍候的
+
+n. 服务员，侍者；随员，陪从
+
+CET6 TEM4  ( attendants )
+
+
+
+assignment
+
+英 [ə'saɪnm(ə)nt]  美 [ə'saɪnmənt]
+
+n. 分配；任务；作业；功课
+
+CET4 TEM4  ( assignments )
+
+
+
+association
+
+英 [əˌsəʊsɪˈeɪʃn]  美 [ə,soʃɪ'eʃən]
+
+n. 协会，联盟，社团；联合；联想
+
+CET4 TEM4  ( associations )
+
+
+
+assist
+
+英 [ə'sɪst]  美 [ə'sɪst]
+
+n. 帮助；助攻
+
+vi. 参加；出席
+
+vt. 帮助；促进
+
+CET4 TEM4  ( assisting, assisted, assists )
+
+
+
+atmosphere
+
+英 ['ætməsfɪə]  美 ['ætməsfɪr]
+
+n. 气氛；大气；空气
+
+CET4 TEM4  ( atmospheres )
+
+
+
+attendance
+
+英 [ə'tend(ə)ns]  美 [ə'tɛndəns]
+
+n. 出席；到场；出席人数；考勤
+
+CET4 TEM4  ( attendances )
+
+
+
+assume
+
+英 [ə'sjuːm]  美 [ə'sum]
+
+vi. 假定；设想；承担；采取
+
+vt. 僭取；篡夺；夺取；擅用；侵占
+
+CET4 TEM4  ( assuming, assumed, assumes )
+
+
+
+attitude
+
+英 ['ætɪtjuːd]  美 ['ætɪtʊd]
+
+n. 态度；看法；意见；姿势
+
+CET4 TEM4  ( attitudes )
+
+
+
+attribute
+
+英 [ə'trɪbjuːt]  美 [ə'trɪbjut]
+
+n. 属性；特质
+
+vt. 归属；把…归于
+
+CET4  ( attributing, attributed, attributes )
+
+
+
+audience
+
+英 ['ɔːdɪəns]  美 ['ɔdɪəns]
+
+n. 观众；听众；读者；接见；正式会见；拜会
+
+CET4 TEM4  ( audiences )
+
+
+
+attraction
+
+英 [ə'trækʃ(ə)n]  美 [ə'trækʃən]
+
+n. 吸引，吸引力；引力；吸引人的事物
+
+CET4 TEM4  ( attractions )
+
+
+
+authenticate
+
+英 [ɔː'θentɪkeɪt]  美 [ɔ'θɛntɪket]
+
+vt. 鉴定；证明…是真实的
+
+( authenticating, authenticated, authenticates )
+
+
+
+authentic
+
+英 [ɔː'θentɪk]  美 [ɔ'θɛntɪk]
+
+adj. 真正的，真实的；可信的
+
+CET4 TEM4  
+
+authority
+
+英 [ɔː'θɒrɪtɪ]  美 [ə'θɔrəti]
+
+n. 权威；权力；当局
+
+CET4 TEM4  ( authorities )
+
+
+
+authorize
+
+英/美 ['ɔθəraɪz]
+
+vt. 批准，认可；授权给；委托代替
+
+CET6 TEM4  ( authorizing, authorized, authorizes )
+
+
+
+automatic
+
+英 [ɔːtə'mætɪk]  美 ['ɔtə'mætɪk]
+
+adj. 自动的；无意识的；必然的
+
+n. 自动机械；自动手枪
+
+CET4 TEM4  ( automatics )
+
+
+
+avail
+
+英 [ə'veɪl]  美 [ə'vel]
+
+n. 效用，利益
+
+vt. 有益于，有益于；使对某人有利。
+
+vi. 有益于，有益于；使对某人有利。
+
+CET6 TEM8  ( availing, availed, avails )
+
+
+
+avert
+
+英 [ə'vɜːt]  美 [ə'vɝt]
+
+vt. 避免，防止；转移
+
+CET6 TEM8  ( averting, averted, averts )
 
 
 
