添加6号的单词

--- a/调试2021.11.md
+++ b/调试2021.11.md
@@ -7,3 +7,9 @@
 ![Image](https://raw.githubusercontent.com/simoonp/picture/main/debug/2021-11-04-15-31-29.png)
 
 - A：可能时雷达本身的问题，换个新雷达就好了，也可能时雷达需要校准
+
+- Q：机器人导航时，整个地图向右漂移
+
+## 2021.11.05
+
+编写脚本，便于平时调试
