更新6号的单词

--- a/English/c2021.11.06.md
+++ b/English/c2021.11.06.md
@@ -1,4 +1,12 @@
-Error: Connection out of time
+bibliography
+
+英 [,bɪblɪ'ɒgrəfɪ]  美 [,bɪblɪ'ɑɡrəfi]
+
+n. 参考书目；文献目录
+
+CET6 TEM4  ( bibliographies )
+
+
 
 bafflement
 
