--- a/English/m2021.11.06.md
+++ b/English/m2021.11.06.md
@@ -1,4 +1,12 @@
-Error: Connection out of time
+<font color=Red>bibliography</font>
+
+英 <font color=Teal>[,bɪblɪ'ɒgrəfɪ]</font>  美 <font color=Teal>[,bɪblɪ'ɑɡrəfi]</font>
+
+<font color=Blue>n. 参考书目；文献目录</font>
+
+<font color=Red>CET6 TEM4</font>  <font color=Red>( bibliographies )</font>
+
+
 
 <font color=Red>bafflement</font>
 
