--- a/English/s2021.11.06.md
+++ b/English/s2021.11.06.md
@@ -1,4 +1,8 @@
-Error: Connection out of time
+[31mbibliography[0m
+英 [36m[,bɪblɪ'ɒgrəfɪ][0m  美 [36m[,bɪblɪ'ɑɡrəfi][0m
+[34mn. 参考书目；文献目录[0m
+[31mCET6 TEM4[0m  [31m( bibliographies )[0m
+
 [31mbafflement[0m
 英/美 [36m['bæfəlmənt][0m
 [34mn. 阻碍；迷惑；徒作挣扎[0m
