添加Nvidia Jetson NX 功率查看脚本

--- a/调试2021.11.md
+++ b/调试2021.11.md
@@ -13,3 +13,17 @@
 ## 2021.11.05
 
 编写脚本，便于平时调试
+
+```shell
+# 总脚本，输入参数为master 的名字 IP 密码
+#nbot.sh    
+
+# 启动地盘
+#dipan.sh  
+
+# 启动导航
+#nav.sh  
+
+#启动定点导航
+#point.sh
+```
