--- a/English/c2021.12.09.md
+++ b/English/c2021.12.09.md
@@ -22,35 +22,11 @@ CET4 TEM4  ( inspecting, inspected, inspects )
 
 
 
-dig
+dig up
 
-英 [dɪg]  美 [dɪɡ]
+英/美 [dɪɡ ʌp]
 
-vt. 挖，掘；探究
-
-vi. 挖掘
-
-n. 戳，刺；挖苦
-
-n. (Dig)人名；(罗)迪格
-
-CET4 TEM4  ( digging, dug, digs )
-
-
-
-up
-
-英 [ʌp]  美 [ʌp]
-
-adv. 起来；上涨；向上
-
-prep. 在…之上；向…的较高处
-
-adj. 涨的；起床的；向上的
-
-n. 上升；繁荣
-
-CET4 TEM4  ( upping, upped, ups )
+挖出；掘起；开垦；发现
 
 
 
@@ -240,33 +216,11 @@ CET6 TEM4  ( pastures )
 
 
 
-graze
+graze on
 
-英 [greɪz]  美 [ɡrez]
-
-vt. 放牧；擦伤
-
-vi. 吃草；擦伤
-
-n. 放牧；轻擦
-
-CET6 TEM4  ( grazing, grazed, grazes )
+吃（牛羊等吃草）
 
 
-
-on
-
-英 [ɒn]  美 [ɑn]
-
-adv. 向前地；作用中，行动中；继续着
-
-prep. 向，朝……；关于；在……之上；在……时候
-
-adj. 开着的；发生着的，正在进行中
-
-n. (On)人名；(日)温(姓、名)；(缅、柬、印)翁
-
-CET4 TEM4  
 
 thermal
 
@@ -300,39 +254,11 @@ CET6 TEM4  ( textures )
 
 
 
-carry
+carry out
 
-英 ['kærɪ]  美 [ˈkærɪ]
+vt. 执行，实行；贯彻；实现；完成
 
-vt. 拿，扛；携带；支持；搬运
-
-vi. 能达到；被携带；被搬运
-
-n. 运载；[计] 进位；射程
-
-n. (Carry)人名；(英)卡里
-
-CET4 TEM4  ( carrying, carried, carries )
-
-
-
-out
-
-英 [aʊt]  美 [aʊt]
-
-adv. 出现；在外；出局；出声地；不流行地
-
-adj. 外面的；出局的；下台的
-
-n. 出局
-
-prep. 向；离去
-
-vi. 出来；暴露
-
-vt. 使熄灭；驱逐
-
-CET4 TEM4  ( outing, outed, outs )
+( carrying, carried, carries )
 
 
 
@@ -478,29 +404,13 @@ CET4 TEM4  ( individuals )
 
 
 
-pull
+pull weeds
 
-英 [pʊl]  美 [pʊl]
+美 [pʊl wiːdz]
 
-vt. 拉；拔；拖
+除草
 
-vi. 拉，拖；拔
-
-n. 拉，拉绳；拉力，牵引力；拖
-
-n. (Pull)人名；(法)皮尔；(德、瑞典)普尔
-
-CET4 TEM4  ( pulling, pulled, pulls )
-
-
-
-weeds
-
-英/美 [wiːdz]
-
-n. 野草（weed的复数形式）；丧服；（悼念用的）黑纱
-
-v. 清除（weed的第三人称单数形式）；除去杂草；除去无用的东西
+拔草
 
 
 
@@ -1173,16 +1083,6 @@ diversity
 n. 多样性；差异
 
 TEM4  ( diversities )
-
-
-
-audience
-
-英 ['ɔːdɪəns]  美 ['ɔdɪəns]
-
-n. 观众；听众；读者；接见；正式会见；拜会
-
-CET4 TEM4  ( audiences )
 
 
 
