--- a/English/m2021.12.09.md
+++ b/English/m2021.12.09.md
@@ -22,35 +22,11 @@
 
 
 
-<font color=Red>dig</font>
+<font color=Red>dig up</font>
 
-英 <font color=Teal>[dɪg]</font>  美 <font color=Teal>[dɪɡ]</font>
+英/美 <font color=Teal>[dɪɡ ʌp]</font>
 
-<font color=Blue>vt. 挖，掘；探究</font>
-
-<font color=Blue>vi. 挖掘</font>
-
-<font color=Blue>n. 戳，刺；挖苦</font>
-
-<font color=Blue>n. (Dig)人名；(罗)迪格</font>
-
-<font color=Red>CET4 TEM4</font>  <font color=Red>( digging, dug, digs )</font>
-
-
-
-<font color=Red>up</font>
-
-英 <font color=Teal>[ʌp]</font>  美 <font color=Teal>[ʌp]</font>
-
-<font color=Blue>adv. 起来；上涨；向上</font>
-
-<font color=Blue>prep. 在…之上；向…的较高处</font>
-
-<font color=Blue>adj. 涨的；起床的；向上的</font>
-
-<font color=Blue>n. 上升；繁荣</font>
-
-<font color=Red>CET4 TEM4</font>  <font color=Red>( upping, upped, ups )</font>
+<font color=Blue>挖出；掘起；开垦；发现</font>
 
 
 
@@ -240,33 +216,11 @@
 
 
 
-<font color=Red>graze</font>
+<font color=Red>graze on</font>
 
-英 <font color=Teal>[greɪz]</font>  美 <font color=Teal>[ɡrez]</font>
-
-<font color=Blue>vt. 放牧；擦伤</font>
-
-<font color=Blue>vi. 吃草；擦伤</font>
-
-<font color=Blue>n. 放牧；轻擦</font>
-
-<font color=Red>CET6 TEM4</font>  <font color=Red>( grazing, grazed, grazes )</font>
+<font color=Blue>吃（牛羊等吃草）</font>
 
 
-
-<font color=Red>on</font>
-
-英 <font color=Teal>[ɒn]</font>  美 <font color=Teal>[ɑn]</font>
-
-<font color=Blue>adv. 向前地；作用中，行动中；继续着</font>
-
-<font color=Blue>prep. 向，朝……；关于；在……之上；在……时候</font>
-
-<font color=Blue>adj. 开着的；发生着的，正在进行中</font>
-
-<font color=Blue>n. (On)人名；(日)温(姓、名)；(缅、柬、印)翁</font>
-
-<font color=Red>CET4 TEM4</font>  
 
 <font color=Red>thermal</font>
 
@@ -300,39 +254,11 @@
 
 
 
-<font color=Red>carry</font>
+<font color=Red>carry out</font>
 
-英 <font color=Teal>['kærɪ]</font>  美 <font color=Teal>[ˈkærɪ]</font>
+<font color=Blue>vt. 执行，实行；贯彻；实现；完成</font>
 
-<font color=Blue>vt. 拿，扛；携带；支持；搬运</font>
-
-<font color=Blue>vi. 能达到；被携带；被搬运</font>
-
-<font color=Blue>n. 运载；[计] 进位；射程</font>
-
-<font color=Blue>n. (Carry)人名；(英)卡里</font>
-
-<font color=Red>CET4 TEM4</font>  <font color=Red>( carrying, carried, carries )</font>
-
-
-
-<font color=Red>out</font>
-
-英 <font color=Teal>[aʊt]</font>  美 <font color=Teal>[aʊt]</font>
-
-<font color=Blue>adv. 出现；在外；出局；出声地；不流行地</font>
-
-<font color=Blue>adj. 外面的；出局的；下台的</font>
-
-<font color=Blue>n. 出局</font>
-
-<font color=Blue>prep. 向；离去</font>
-
-<font color=Blue>vi. 出来；暴露</font>
-
-<font color=Blue>vt. 使熄灭；驱逐</font>
-
-<font color=Red>CET4 TEM4</font>  <font color=Red>( outing, outed, outs )</font>
+<font color=Red>( carrying, carried, carries )</font>
 
 
 
@@ -478,29 +404,13 @@
 
 
 
-<font color=Red>pull</font>
+<font color=Red>pull weeds</font>
 
-英 <font color=Teal>[pʊl]</font>  美 <font color=Teal>[pʊl]</font>
+美 <font color=Teal>[pʊl wiːdz]</font>
 
-<font color=Blue>vt. 拉；拔；拖</font>
+<font color=Blue>除草</font>
 
-<font color=Blue>vi. 拉，拖；拔</font>
-
-<font color=Blue>n. 拉，拉绳；拉力，牵引力；拖</font>
-
-<font color=Blue>n. (Pull)人名；(法)皮尔；(德、瑞典)普尔</font>
-
-<font color=Red>CET4 TEM4</font>  <font color=Red>( pulling, pulled, pulls )</font>
-
-
-
-<font color=Red>weeds</font>
-
-英/美 <font color=Teal>[wiːdz]</font>
-
-<font color=Blue>n. 野草（weed的复数形式）；丧服；（悼念用的）黑纱</font>
-
-<font color=Blue>v. 清除（weed的第三人称单数形式）；除去杂草；除去无用的东西</font>
+<font color=Blue>拔草</font>
 
 
 
@@ -1173,16 +1083,6 @@
 <font color=Blue>n. 多样性；差异</font>
 
 <font color=Red>TEM4</font>  <font color=Red>( diversities )</font>
-
-
-
-<font color=Red>audience</font>
-
-英 <font color=Teal>['ɔːdɪəns]</font>  美 <font color=Teal>['ɔdɪəns]</font>
-
-<font color=Blue>n. 观众；听众；读者；接见；正式会见；拜会</font>
-
-<font color=Red>CET4 TEM4</font>  <font color=Red>( audiences )</font>
 
 
 
