--- a/English/s2021.12.09.md
+++ b/English/s2021.12.09.md
@@ -10,21 +10,9 @@
 [34mvi. 进行检查；进行视察[0m
 [31mCET4 TEM4[0m  [31m( inspecting, inspected, inspects )[0m
 
-[31mdig[0m
-英 [36m[dɪg][0m  美 [36m[dɪɡ][0m
-[34mvt. 挖，掘；探究[0m
-[34mvi. 挖掘[0m
-[34mn. 戳，刺；挖苦[0m
-[34mn. (Dig)人名；(罗)迪格[0m
-[31mCET4 TEM4[0m  [31m( digging, dug, digs )[0m
-
-[31mup[0m
-英 [36m[ʌp][0m  美 [36m[ʌp][0m
-[34madv. 起来；上涨；向上[0m
-[34mprep. 在…之上；向…的较高处[0m
-[34madj. 涨的；起床的；向上的[0m
-[34mn. 上升；繁荣[0m
-[31mCET4 TEM4[0m  [31m( upping, upped, ups )[0m
+[31mdig up[0m
+英/美 [36m[dɪɡ ʌp][0m
+[34m挖出；掘起；开垦；发现[0m
 
 [31mweed[0m
 英 [36m[wiːd][0m  美 [36m[wid][0m
@@ -119,20 +107,9 @@
 [34mn. (Pasture)人名；(英)帕斯彻；(法)帕斯蒂尔[0m
 [31mCET6 TEM4[0m  [31m( pastures )[0m
 
-[31mgraze[0m
-英 [36m[greɪz][0m  美 [36m[ɡrez][0m
-[34mvt. 放牧；擦伤[0m
-[34mvi. 吃草；擦伤[0m
-[34mn. 放牧；轻擦[0m
-[31mCET6 TEM4[0m  [31m( grazing, grazed, grazes )[0m
+[31mgraze on[0m
+[34m吃（牛羊等吃草）[0m
 
-[31mon[0m
-英 [36m[ɒn][0m  美 [36m[ɑn][0m
-[34madv. 向前地；作用中，行动中；继续着[0m
-[34mprep. 向，朝……；关于；在……之上；在……时候[0m
-[34madj. 开着的；发生着的，正在进行中[0m
-[34mn. (On)人名；(日)温(姓、名)；(缅、柬、印)翁[0m
-[31mCET4 TEM4[0m  
 [31mthermal[0m
 英 [36m['θɜːm(ə)l][0m  美 [36m['θɝml][0m
 [34madj. 热的；热量的；保热的[0m
@@ -149,23 +126,9 @@
 [34mn. 质地；纹理；结构；本质，实质[0m
 [31mCET6 TEM4[0m  [31m( textures )[0m
 
-[31mcarry[0m
-英 [36m['kærɪ][0m  美 [36m[ˈkærɪ][0m
-[34mvt. 拿，扛；携带；支持；搬运[0m
-[34mvi. 能达到；被携带；被搬运[0m
-[34mn. 运载；[计] 进位；射程[0m
-[34mn. (Carry)人名；(英)卡里[0m
-[31mCET4 TEM4[0m  [31m( carrying, carried, carries )[0m
-
-[31mout[0m
-英 [36m[aʊt][0m  美 [36m[aʊt][0m
-[34madv. 出现；在外；出局；出声地；不流行地[0m
-[34madj. 外面的；出局的；下台的[0m
-[34mn. 出局[0m
-[34mprep. 向；离去[0m
-[34mvi. 出来；暴露[0m
-[34mvt. 使熄灭；驱逐[0m
-[31mCET4 TEM4[0m  [31m( outing, outed, outs )[0m
+[31mcarry out[0m
+[34mvt. 执行，实行；贯彻；实现；完成[0m
+[31m( carrying, carried, carries )[0m
 
 [31mseveral[0m
 英 [36m[ˈsevrəl][0m  美 [36m[ˈsɛvrəl][0m
@@ -238,18 +201,10 @@
 [34mn. 个人，个体[0m
 [31mCET4 TEM4[0m  [31m( individuals )[0m
 
-[31mpull[0m
-英 [36m[pʊl][0m  美 [36m[pʊl][0m
-[34mvt. 拉；拔；拖[0m
-[34mvi. 拉，拖；拔[0m
-[34mn. 拉，拉绳；拉力，牵引力；拖[0m
-[34mn. (Pull)人名；(法)皮尔；(德、瑞典)普尔[0m
-[31mCET4 TEM4[0m  [31m( pulling, pulled, pulls )[0m
-
-[31mweeds[0m
-英/美 [36m[wiːdz][0m
-[34mn. 野草（weed的复数形式）；丧服；（悼念用的）黑纱[0m
-[34mv. 清除（weed的第三人称单数形式）；除去杂草；除去无用的东西[0m
+[31mpull weeds[0m
+美 [36m[pʊl wiːdz][0m
+[34m除草[0m
+[34m拔草[0m
 
 [31mefficient[0m
 英 [36m[ɪ'fɪʃ(ə)nt][0m  美 [36m[ɪ'fɪʃnt][0m
@@ -586,9 +541,4 @@
 英 [36m[daɪ'vɜːsɪtɪ; dɪ-][0m  美 [36m[dɪˈvəsɪti][0m
 [34mn. 多样性；差异[0m
 [31mTEM4[0m  [31m( diversities )[0m
-
-[31maudience[0m
-英 [36m['ɔːdɪəns][0m  美 [36m['ɔdɪəns][0m
-[34mn. 观众；听众；读者；接见；正式会见；拜会[0m
-[31mCET4 TEM4[0m  [31m( audiences )[0m
 
