--- a/神经网络的梯度下降法.md
+++ b/神经网络的梯度下降法.md
@@ -2,6 +2,8 @@
 
 
 $m$个样本，每个样本$n$个参数
+
+
 $$
 \begin{array}{l}
 	&z^{[1](1)}=W^{[1]}x^{(1)}+b^{[1]}	\\
@@ -11,11 +13,13 @@ $$
 \end{array}
 $$
 
-忽略$b^{[1]}$，$W^{[1]}$是一个行向量，$x^{[1]}\ldots x^{[m]}$是$m$个$n \times 1$列向量，广播$W^{[1]}$为$j\times n$矩阵
+![Image](https://raw.githubusercontent.com/simoonp/picture/main/DeepLearning/net1.svg)
+
+忽略$b^{[1]}$，$W^{[1]}$是一个行向量，$x^{[1]}\ldots x^{[m]}$是$m$个$n \times 1$列向量，$W^{[1]}$为$p\times n$矩阵($p$的大小取决于该层网络中计算单元(神经元)的数量)
 
 $$
 \begin{aligned}
-	{W^{[1]}}_{j \times n} x_{n \times m} 
+	{W^{[1]}}_{p \times n} x_{n \times m} 
 	&= \begin{bmatrix}
 		\cdots	\\
 		\cdots	\\
@@ -28,11 +32,11 @@ $$
 		x^{(1)}_{n}	&\cdots	&x^{(m)}_{n}
 	\end{bmatrix}	\\
 	&=\begin{bmatrix}
-		\sum{(W^{[1]}_{1}x^{(1)}_{1}+W^{[1]}_{2}x^{(1)}_{2} \cdots W^{[1]}_{n}x^{(1)}_{n})}  &\cdots  &\sum^{n}_{i=1}{W^{[1]}_{i}x^{(m)}_{i}}	\\
+		\sum{(W^{[1]}_{1,1}x^{(1)}_{1}+W^{[1]}_{1,2}x^{(1)}_{2} \cdots W^{[1]}_{n}x^{(1)}_{1,n})}  &\cdots  &\sum^{n}_{i=1}{W^{[1]}_{1,i}x^{(m)}_{i}}	\\
 		\vdots	&\cdots	&\vdots	\\
-		\sum^{n}_{i=1}{W^{[1]}_{i}x^{(1)}_{i}}	&\cdots &\sum^{n}_{i=1}{W^{[1]}_{i}x^{(m)}_{i}}	\\
+		\sum^{n}_{i=1}{W^{[1]}_{j,i}x^{(1)}_{i}}	&\cdots &\sum^{n}_{i=1}{W^{[1]}_{j,i}x^{(m)}_{i}}	\\
 		\vdots	&\ddots	&\vdots	\\
-		\sum^{n}_{i=1}{W^{[1]}_{i}x^{(1)}_{i}}	&\cdots &\sum^{n}_{i=1}{W^{[1]}_{i}x^{(m)}_{i}}
+		\sum^{n}_{i=1}{W^{[1]}_{p,i}x^{(1)}_{i}}	&\cdots &\sum^{n}_{i=1}{W^{[1]}_{p,i}x^{(m)}_{i}}
 	\end{bmatrix}	\\
 	&=\begin{bmatrix}
 		\vdots	&\vdots	&\vdots	\\
@@ -41,7 +45,7 @@ $$
 	\end{bmatrix}	\\
 	&=\begin{bmatrix}
 		\vdots	&\vdots	&\vdots	\\
-		z^{[1](1)} &\cdots &z^{[1](1)}	\\
+		z^{[1](1)} &\cdots &z^{[1](m)}	\\
 		\vdots	&\vdots	&\vdots	
 	\end{bmatrix}	\\
 	&=Z^{[1]}
