--- a/调试2021.12.md
+++ b/调试2021.12.md
@@ -7,3 +7,37 @@
 
 2、输入 python: Select interpreter 打开python解释器选项，选择自己需要的python解释器
 ```
+
+---
+
+## Autodrive相关调试
+
+1、连接大显示屏后，更改屏幕分辨率
+```shell
+xrandr -s 1920x1080_60.00
+```
+
+2、安装文本对比工具meld
+```shell
+sudo apt install meld
+```
+
+3、安装Xbox驱动
+```shell
+sudo apt-add-repository ppa:rael-gc/ubuntu-xboxdrv
+sudo apt-get update
+sudo apt-get install ubuntu-xboxdrv
+```
+*注：驱动安装后最好重启电脑*
+
+4、测试电机控制器
+```shell
+# 启动底盘
+roslaunch racebot test_vesc.launch
+
+# 启动游戏杆
+roslaunch racebot joy.launch
+```
+*注：左手食指按住手柄的dead键，左手拇指控制左边摇杆前后用于控制速度，右手拇指控制右边摇杆用于控制方向*
+
+*小车最好架起来，车轮不要着地，测试小车前进后退，左右转。*
