新的室外调试思路：RTK+move_base，使用gps_common包

--- a/调试2021.12.md
+++ b/调试2021.12.md
@@ -41,3 +41,19 @@ roslaunch racebot joy.launch
 *注：左手食指按住手柄的dead键，左手拇指控制左边摇杆前后用于控制速度，右手拇指控制右边摇杆用于控制方向*
 
 *小车最好架起来，车轮不要着地，测试小车前进后退，左右转。*
+
+## 2021.12.13 添加gps_common，融合gps和move_base导航避障
+
+1、相关包的编译安装
+
+```shell
+cd ~/gps_ws/src
+git clone https://github.com/swri-robotics/gps_umd.git
+cd ..
+
+sudo apt install libgps-dev 	#编译gps_common需要gps库
+
+catkin_make -DCATKIN_WHITELIST_PACKAGES="gps_common"	#先编译gps_common，生成相关头文件
+
+catkin_make -DCATKIN_WHITELIST_PACKAGES="" # 编译其他2个包
+```
