添加之前得调试日志

--- a/调试2021.12.md
+++ b/调试2021.12.md
@@ -42,6 +42,19 @@ roslaunch racebot joy.launch
 
 *小车最好架起来，车轮不要着地，测试小车前进后退，左右转。*
 
+相关测试：
+    autodrive入门教程-测试-测试电机控制器
+
+    autodrive入门教程-测试-IMU测试
+
+    autodrive入门教程-测试-ZED测试
+
+    autodrive入门教程-控制-速度和方向参数调整 XBOX
+
+    autodrive入门教程-控制-键盘控制(阿克曼)
+
+    autodrive入门教程-视觉建图-实现Rtabmap建图（zed）
+
 ## 2021.12.13 添加gps_common，融合gps和move_base导航避障
 
 1、相关包的编译安装
