使用Zotero为知网下载的论文添加目录

--- a/摸鱼日志.md
+++ b/摸鱼日志.md
@@ -2,7 +2,7 @@
 
 - 2021.10.11
 
-下载视频号里的视频
+### 下载视频号里的视频
 
 思路：通过http调试工具抓取视频的url
 
@@ -21,7 +21,7 @@
 
 - 2021.10.22
 
-Ubuntu终端监控系统
+### Ubuntu终端监控系统
 
 ```shell
 $ sudo htop
@@ -34,3 +34,35 @@ $ sudo htop
 $ pip list
 ```
 
+- 2021.12.28
+
+### 通过Zotero给知网下载的无目录PDF添加目录
+
+相关软件：
+|相关软件|链接|
+|---|---|
+|Zotero|https://www.zotero.org/|
+|Jasminum(Zotero插件)|https://github.com/l0o0/jasminum|
+|PDFtk server|https://www.pdflabs.com/tools/pdftk-server/|
+
+1、安装Zetero
+
+2、在 Jasminum 链接中下载最新的xpi文件
+
+3、打开 Zotero -> 工具 -> 插件 -> 右上小齿轮图标 -> Install Add-on From File ... -> 选择下载好的xpi文件。
+
+![Image](https://raw.githubusercontent.com/simoonp/picture/main/log/Jasminum01.png)
+
+4、下载PDFtk server，并安装
+
+*注：Windows下安装比较简单，Mac和Linux下比较麻烦，Mac下可参考Jasminum在Github上的教程，Linux下可直接通过snap安装(sudo snap install pdftk)参考https://www.cnblogs.com/ArtisticZhao/p/15177598.html*
+
+5、打开 Zotero -> 编辑 -> 首选项 -> 茉莉花 -> PDFtk Server路径设置，选择PDFtk server的路径
+
+![Image](https://raw.githubusercontent.com/simoonp/picture/main/log/PDFtk.png)
+
+6、将PDF论文拖入Zotero后，就可以通过 Jasminum 添加目录信息了
+
+![Image](https://raw.githubusercontent.com/simoonp/picture/main/log/Jasminum02.png)
+
+*注：必须.caj文件本身包含目录信息，否则Jasminum无法为论文添加目录信息*
