添加小米路由器mini刷机日志

--- a/摸鱼日志.md
+++ b/摸鱼日志.md
@@ -66,3 +66,39 @@ $ pip list
 ![Image](https://raw.githubusercontent.com/simoonp/picture/main/log/Jasminum02.png)
 
 *注：必须.caj文件本身包含目录信息，否则Jasminum无法为论文添加目录信息*
+
+- 2021.12.28
+
+### 小米路由器mini刷机openwrt固件
+
+参考链接：https://www.cnblogs.com/HGNET/p/14697980.html
+
+**注**：小米路由器mini固件miwifi.bin/miwifi_ssh.bin，若是多次刷入失败，可能是U盘的问题，建议换个U盘试试
+
+原固件备份：little-project/openwrt/xiaomi_uboot.bin
+
+使用的Breed固件：little-project/openwrt/breed-mt7620-xiaomi-mini.bin
+
+刷入的openwrt固件：little-project/openwrt/openwrt-ramips-mt7620-xiaomi_miwifi-mini-squashfs-sysupgrade.bin
+
+
+### 通过ssh传输文件——scp指令
+
+1、从远程服务器上下载文件
+```shell
+scp username@ip:远程文件的绝对路径 本地目录的绝对路径
+#scp root@192.168.31.1:/tmp/xiaomi_uboot.bin /mnt/h/
+```
+2、上传本地文件到远程服务器
+```shell
+scp 本地文件绝对路径 username@ip:远程文件夹的绝对路径
+#scp /mnt/h/语义分割/breed-mt7620-xiaomi-mini.bin root@192.168.31.1:/tmp/
+```
+3、从服务器下载整个目录
+```shell
+scp -r username@ip:远程目录绝对路径 本地目录绝对路径
+```
+4、上传目录到服务器
+```shell
+scp -r 本地目录绝对路径 username@ip:远程目录绝对路径
+```
