--- a/日志2022.01.md
+++ b/日志2022.01.md
@@ -1325,7 +1325,7 @@ BUILDING.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE-NOTES  RUNNIN
 # 在浏览器里输入 http://localhost:9090/ 可以访问
 ```
 
-![diytomcat01](C:\Users\MOON\Desktop\diytomcat01.png)
+![diytomcat01](https://raw.githubusercontent.com/simoonp/picture/main/docker/diytomcat01.png)
 
 5、发布项目
 
@@ -1379,7 +1379,7 @@ System.out.println("---my test web logs----");
 </html>
 ```
 
-![diytomcat02](C:\Users\MOON\Desktop\diytomcat02.png)
+![diytomcat02](https://raw.githubusercontent.com/simoonp/picture/main/docker/diytomcat02.png)
 
 查看日志
 
@@ -1431,13 +1431,13 @@ docker push 新镜像名:[tag]
 
 ### 小结
 
-![docker_summary](C:\Users\MOON\Desktop\docker_summary.png)
+![docker_summary](https://raw.githubusercontent.com/simoonp/picture/main/docker/docker_summary.png)
 
 ## Docker网络
 
 ### 理解 Docker0 网络
 
-![docker_net](C:\Users\MOON\Desktop\docker_net.png)
+![docker_net](https://raw.githubusercontent.com/simoonp/picture/main/docker/docker_net.png)
 
 ```shell
 # 问题： docker如何处理容器之间网络的访问
@@ -1662,7 +1662,7 @@ root@tom:/home/tom# docker run -d -P --name net-02 --net mynet tomcat
 fb9d1b64f1aafc3835d31ac21ed123fa1d1123c5122ce3899638513ef85bdfe8
 ```
 
-![docker_net02](C:\Users\MOON\Desktop\docker_net02.png)
+![docker_net02](https://raw.githubusercontent.com/simoonp/picture/main/docker/docker_net02.png)
 
 ```shell
 root@tom:/home/tom# docker exec -it net-01 ping 192.168.66.3
@@ -1681,11 +1681,11 @@ PING net-02 (192.168.66.3) 56(84) bytes of data.
 
 ### 网络连通
 
-![docker_net03](C:\Users\MOON\Desktop\docker_net03.png)
+![docker_net03](https://raw.githubusercontent.com/simoonp/picture/main/docker/docker_net03.png)
 
 1、连接一个容器到一个网络
 
-![image-20220111215236341](C:\Users\MOON\AppData\Roaming\Typora\typora-user-images\image-20220111215236341.png)
+![docker_net05](https://raw.githubusercontent.com/simoonp/picture/main/docker/docker_net05.png)
 
 ```shell
 # 创建 tomcat01 和 tomcat02
@@ -1698,7 +1698,7 @@ root@tom:/home/tom# docker network connect mynet tomcat01
 root@tom:/home/tom# docker network inspect mynet
 ```
 
-![docker_net04](C:\Users\MOON\Desktop\docker_net04.png)
+![docker_net04](https://raw.githubusercontent.com/simoonp/picture/main/docker/docker_net04.png)
 
 将tomcat01添加到mynet——一个容器两个ip
 
