--- a/日志2022.01.md
+++ b/日志2022.01.md
@@ -769,7 +769,7 @@ docker: Error response from daemon: OCI runtime create failed: invalid mount {De
 ERRO[0000] error waiting for container: context canceled 
 # 解决： 修改 dockerfile1 将卷改成绝对路径
 FROM ubuntu
-VOLUME ["volum01","volume02"]
+VOLUME ["/volum01","/volume02"]
 CMD echo "----end----"
 CMD /bin/bash 
 
@@ -1707,5 +1707,169 @@ root@tom:/home/tom# docker exec -it net-01 ping tomcat01
 PING tomcat01 (192.168.66.4) 56(84) bytes of data.
 64 bytes from tomcat01.mynet (192.168.66.4): icmp_seq=1 ttl=64 time=0.112 ms
 64 bytes from tomcat01.mynet (192.168.66.4): icmp_seq=2 ttl=64 time=0.082 ms
+```
+
+
+
+## Docker小结
+
+```shell
+# 启动docker
+systemctl start docker 
+
+# 测试hello world
+docker run hello-world
+
+#查看已安装的镜像 
+docker images 
+
+# docker帮助命令
+docker version 显示docker的版本信息
+docker info    显示docker的系统信息，更详细 
+docker 命令 --help
+
+# 镜像搜索
+docker search 镜像名字
+
+# 镜像下载，没有 [:tag] 默认最新版
+docker pull 镜像名字[:tag]
+
+# 删除镜像
+docker rmi -f 镜像id # 删除指定的镜像
+docker rmi -f 镜像id1 镜像id2 镜像id3 # 删除多个镜像
+docker rmi -f $(docker images -aq) #删除全部指令，$(docker images -aq)可以搜索全部镜像的id
+
+# 启动镜像
+docker run [可选参数] imagesid
+    --name="Name"   建立的容器的名字，用来区分容器
+    -d              后台运行方式
+    -it             使用交互方式运行，进入容器查看内容
+    -p              指定容器的端口 -p 8080:8080
+        -p 主机端口：容器端口
+        -p 容器端口
+        容器端口
+        -p ip:主机端口:容器端口
+    -P              随机指定端口
+
+# 列出所有运行的容器
+docker ps
+        # 列出当前正在运行的容器
+    -a  # 列出当前正在运行的容器+历史运行过的容器
+    -n=?    #显示最近创建的？个容器
+    -q  # 只显示容器的编号
+
+# 退出容器
+exit    # 直接停止容器并退出
+Ctrl+P+Q    #容器不停止，退出
+
+# 删除容器
+docker rm 容器id    # 删除指定容器，不能删除正在运行的容器，强制删除 -f
+docker rm $(docker ps -aq)  # 删除所有容器
+docker ps -a -q|xargs docker rm # 删除所有容器
+
+# 启动和停止容器
+docker start 容器id     # 启动
+docker restart 容器id   # 重启
+docker stop 容器id      # 停止
+docker kill 容器id      # 强制停止容器
+
+# 后台启动容器
+docker run -d 镜像名
+
+# 查看日志
+docker logs -f -t --tail 日志数量 容器id 
+    -t  #显示日志
+    -f  #显示时间戳
+    --tail number   # 显示日志条数
+
+# 查看容器中进程的信息
+docker top 容器id
+
+# 查看镜像的源数据
+docker inspect 容器id
+
+# 进入正在运行的容器
+# 启动新进程
+docker exec -it 容器id bashShell
+# 不启动新进程
+docker attach 容器id
+
+# 从容器拷贝文件到主机
+docker cp 容器id:容器内文件的路径 主机文件夹路径
+
+# 可视化工具 portainer
+docker run -d -p 8088:9000 --restart=always -v /var/run/docker.sock:/var/run/docker.sock --privileged=true portainer/portainer
+# 在浏览器通过8080端口访问
+
+# 将容器提交为镜像
+docker commit -m="提交的描述信息" -a="作者名" 容器ID 目标镜像名:[tag]
+
+# 挂载数据卷
+# 直接挂载
+docker run -it -v 主机目录绝对路径:容器目录绝对路径 容器id
+# 匿名挂载 卷名是一长串字符
+docker run -it -v 容器目录绝对路径 容器id
+# 具名挂载，卷名保存在宿主机的/var/lib/docker/volumes/目录下，数据保存在对应卷名的_data目录下
+docker run -it -v 卷名:容器内路径 容器id
+# 通过 -v 容器内路径:ro/rw 改变读写权限
+    ro  #只读，在容器内不能更改内容，只能从宿主机修改
+    rw  #可读可写
+
+# 容器之间实现数据共享，容器2会共用容器1的卷，即便容器1被删除
+docker run -it --name 容器2 --volumes-from 容器1 镜像id
+
+# DockerFile
+构建过程
+    1、构建 dockerfile 文件
+    2、docker build 构建成为一个镜像
+    3、docker run 运行镜像
+    4、docker push 发布镜像（DockerHub、阿里云镜像仓库等）
+# DockerFile指令
+FROM		# 基础镜像，一切从这里开始
+MAINTAINER	# 镜像是谁写的，姓名+邮箱
+RUN			# 镜像构建是需要的命令
+ADD			# 步骤：tomcat容器，这个tomcat压缩包，就是要添加的内容
+WORKDIR		# 镜像的工作目录
+VOLUME		# 挂载的目录
+EXPOSE		# 指定暴漏的端口，端口配置
+CMD			# 指定这个容器启动是要执行的指令，只有CMD的最后一个指令会生效
+ENTRYPOINT	# 指定这个容器启动是要执行的指令，可以追加命令
+ONBIUILD	# 当构建一个被继承的DockerFile，这是就会运行ONBUILD
+COPY		# 类似ADD，将文件拷贝到镜像中
+ENV			# 构建时设置环境变量
+
+# 列出本地镜像的变更历史
+docker history 镜像id
+
+# 登录账号
+docker login -u 用户名
+
+# 给镜像增加标签
+docker tag 镜像id 新镜像名:[tag] # 镜像名：用户名/名字
+
+# push镜像，直接push会被拒绝
+docker push 新镜像名:[tag]
+
+# 容器2可以ping容器1，但容器1不能ping容器2
+docker exec -it 容器2 --link 容器1 镜像id
+
+# 查看所有 docker 网络
+docker network ls
+
+# docker的网络模式
+    bridge：桥接（m默认）
+    none：不配置网络
+    host：和宿主机共享网络
+    container：容器间联通（用的少，局限大）
+
+# 自定义一个网络
+docker network create --driver 网络模式 --subnet 1子网/划分方法 --gateway 网关地址 网络名
+# docker network create --driver bridge --subnet 192.168.66.0/24 --gateway 192.168.66.1 mynet
+
+# --net 指定容器连接某个网络；不指定的情况下，默认加了 --net bridge
+docker run -d -P --name 容器名 --net 网络名 镜像id
+
+# 将容器添加到指定网络
+docker network connect 网络名 容器名
 ```
 
