清除U盘分区

--- a/日志2022.03.md
+++ b/日志2022.03.md
@@ -1,1 +1,35 @@
 # 2022.03.01
+
+## 上传GitHub，git push失败
+
+失败提示： `gnutls_handshake() failed: The TLS connection was non-properly terminated.`
+
+1、重置代理
+```shell
+git config --global  --unset https.https://github.com.proxy 
+git config --global  --unset http.https://github.com.proxy 
+```
+
+2、重新设置账户
+```shell
+git config --global user.name "xxx"
+git config --global user.email "xxxx"
+```
+
+3、重新申请token
+
+4、git push时输入新的token
+
+## U盘被分区后，重新格式化成一个盘
+
+1、Win + R，输入CMD，打开Windows终端
+
+2、输入 `diskpart` 指令，弹出新窗口
+
+3、输入 `list disk` 列出所有磁盘
+
+4、输入 `select disk 磁盘序号` 选择磁盘
+
+5、输入 `clean` 清除分区，然后就可以在磁盘管理器里面看到一块未格式化的磁盘
+
+![Image](https://raw.githubusercontent.com/simoonp/picture/main/log/disk.png)
