--- a/日志2022.03.md
+++ b/日志2022.03.md
@@ -33,3 +33,29 @@ git config --global user.email "xxxx"
 5、输入 `clean` 清除分区，然后就可以在磁盘管理器里面看到一块未格式化的磁盘
 
 ![Image](https://raw.githubusercontent.com/simoonp/picture/main/log/disk.png)
+
+
+## git删除远程文件
+```shell
+git rm --cached 文件名
+```
+
+## 微星主板刷BIOS
+
+1、在微星官网下载BIOS文件，将压缩包内的 `.2E0` 文件重命名为 `MSI.ROM` 复制到FAT32格式U盘的根目录下
+
+(注：部分劣质U盘，主板可能无法识别)
+
+2、将主板插上24Pin主板供电和8Pin供电，电源上电，主机开关不用开启
+
+3、将U盘插到主板带有BIOS或Flash字样的USB口（没有标注的查阅说明书或询问客服），长按BIOS刷写按钮3秒然后松开，当红灯开始闪烁说明正在搜索BIOS文件，红灯快速闪烁说明正在写入BIOS，指示灯熄灭表示写入完毕(也可能写入完毕后指示灯常亮)。
+
+## 京东脚本库
+```shell
+1、
+ql repo https://github.com/zero205/JD_tencent_scf.git "jd_|jx_|jdCookie" "backUp|icon" "^jd[^_]|USER|sendNotify|sign_graphics_validate|JDJR|JDSign|ql" "main"
+2、
+ql repo https://github.com/atyvcn/jd_scripts.git "jd_|jx_|ty_|CheckRpeat" "activity|backUp|icon" "^jd[^_]|^JD|USER|utils|function|^sign|sendNotify"
+```
+
+## leetcode刷题——01
